third_party/rust/chromium_crates_io/vendor/cxx-1.0.143/tests/ui/function_with_body.stderr
error: expected `;`
 --> tests/ui/function_with_body.rs:4:16
  |
4 |         fn f() {}
  |                ^
